[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/22.png" type="Texture" id=2]
[ext_resource path="res://scenes/BAUHS93.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 19
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 21.0
margin_top = -55.0
margin_right = 209.0
margin_bottom = 34.0
rect_scale = Vector2( 4, 4 )

[node name="jugar" type="Button" parent="VBoxContainer"]
margin_right = 188.0
margin_bottom = 29.0
text = "JUGAR"
flat = true

[node name="creditos" type="Button" parent="VBoxContainer"]
margin_top = 33.0
margin_right = 188.0
margin_bottom = 62.0
text = "CRÃ‰DITOS"
flat = true

[node name="salir" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 188.0
margin_bottom = 95.0
text = "SALIR"
flat = true

[connection signal="pressed" from="VBoxContainer/jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="VBoxContainer/salir" to="." method="_on_salir_pressed"]
